--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog-platform",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Navse-Jlia.github.io/blog..github.io",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -28,6 +29,8 @@
     "yup": "^1.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -55,6 +58,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
     "sass": "^1.70.0"
   }
